<resources>
    <string name="app_name">AhwazFriut</string>
    <string name="get_info_text_main">در حال دریافت اطلاعات</string>
    <string name="well_come">خوش آمدید</string>
    <string name="user_txt">با یک شماره همراه و آدرس ثبت نام کنید</string>
    <string name="sign_up_btn">ثبت نام کنید</string>
    <string name="sign_in">وارد شوید</string>
    <string name="username_user">نام کاربری ...</string>
    <string name="register_txt">ثبت نام</string>
    <string name="number_user">شماره همراه ...</string>
    <string name="already_hav_account">از قبل اکانت دارید ؟</string>
    <string name="ahwaz_friut_txt">فروت</string>
    <string name="guid_user_txt_sign_up_page">لطفا اطلاعات خود را وارد کرده و برای شروع خرید ، دکمه ثبت اطلاعات و شروع خرید را فشار دهید</string>
    <string name="send_code_mobile">ارسال کد تایید</string>
    <string name="getinformation_and_start_shopping">ثبت اطلاعات و شروع خرید</string>
    <string name="go_to_sign_in_page">برای ورود کلیک کنید</string>
    <string name="user_adress">آدرس مشتری :</string>
    <string name="home">خانه</string>
    <string name="search">جستجو</string>
    <string name="cart">سبد خرید</string>
    <string name="txt_bannana">bannana</string>
    <string name="price_product">8.000 تومان</string>
    <string name="last_orderes">سفارش های قبلی</string>
    <string name="choose_address">انتخاب آدرس</string>
    <string name="increase_remaining">افزایش موجودی</string>
    <string name="support">پشتیبانی</string>
    <string name="exit">خروج</string>
    <string name="search_page_edtx">جستجو ...</string>
    <string name="cart_empty">سبد خرید شما خالی می باشد</string>
    <string name="start_shopping">شروع خرید</string>
    <string name="title_item_detail">اسم محصول</string>
    <string name="price_item_details">price_item_details</string>
    <string name="last_orders">سفارش های قبلی</string>
    <string name="date_order">تاریخ سفارش :</string>
    <string name="cart_txt">سبد خرید</string>
    <string name="choose_time_and_submit_order">انتخاب زمان تحویل و ثبت سفارش</string>
    <string name="product_name_cart">نام محصول</string>
    <string name="amount_items_Cart">تعداد محصول</string>
    <string name="price_items_cart">قیمت محصول</string>
    <string name="amount_user_choose_cart">1</string>
    <string name="price_items_choose_by_user">1000</string>
</resources>
