<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal500"
    android:layoutDirection="rtl"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/txt_rigster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:fontFamily="@font/royab"
        android:background="@color/grey200"
        android:text="@string/register_txt"
        android:textColor="@android:color/black"
        android:textSize="28sp"


        />

    <TextView
        android:id="@+id/txt_guid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/nikibold"
        android:lineSpacingExtra="8dp"
        android:padding="16dp"
        android:text="@string/guid_user_txt_sign_up_page"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/shape_signup"
        android:elevation="5dp"
        android:fontFamily="@font/nikibold"
        android:hint="@string/username_user"
        android:inputType="text"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:textSize="22sp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/shape_signup"
        android:elevation="5dp"
        android:fontFamily="@font/nikibold"
        android:hint="@string/number_user"
        android:inputType="number"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:textSize="22sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/shape_signup"
        android:elevation="5dp"
        android:fontFamily="@font/nikibold"
        android:hint="آدرس ..."
        android:inputType="text"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:textSize="22sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/red_a_400"
        android:elevation="5dp"
        android:fontFamily="@font/titrbold"
        android:padding="8dp"
        android:text="@string/getinformation_and_start_shopping"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_gravity="center"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/txt_already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@+id/txt_sign_in_btn"
            android:fontFamily="@font/royab"
            android:paddingTop="8dp"
            android:text="@string/already_hav_account"
            android:textSize="18sp" />

        <Button
            android:id="@+id/txt_sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_sign"
            android:fontFamily="@font/royab"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/go_to_sign_in_page"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>