<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    >


    <RelativeLayout
        android:id="@+id/rl_cart_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/cart_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:fontFamily="@font/roya"
            android:text="@string/cart_txt"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <ImageButton
            android:id="@+id/trash_icon_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@android:color/white"
            app:srcCompat="@drawable/ic_delete_trash_cart" />

        <ImageButton
            android:id="@+id/home_icon_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@android:color/white"
            app:srcCompat="@drawable/ic_home_icon_cart" />


    </RelativeLayout>

    <View
        android:id="@+id/sapce"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_cart_txt"
        android:background="@color/indigo700" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sapce"

    />




    <TextView
        android:id="@+id/show_empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roya"
        android:text="@string/cart_empty"
        android:textColor="@color/red_a_400"
        android:textSize="25sp" />


    <Button

        android:id="@+id/start_shopping_in_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_empty_cart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/blue700"
        android:fontFamily="@font/titrbold"
        android:padding="8dp"
        android:text="@string/start_shopping"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/choose_titme_and_submit_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/deeporange500"
        android:elevation="8dp"
        android:fontFamily="@font/titrbold"
        android:text="@string/choose_time_and_submit_order"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"

        />


</RelativeLayout>